<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutSaison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSaison"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/MyLabel"
            android:text="@string/saison_label"/>

        <Spinner
            android:id="@+id/spinner_saison"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewVerband"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/MyLabel"
            android:text="@string/verband_label"/>

        <Spinner
            android:id="@+id/spinner_verband"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewBezirk"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/MyLabel"
            android:text="@string/bezirk_label"/>

        <Spinner
            android:id="@+id/spinner_bezirk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewKreise"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/MyLabel"
            android:text="@string/kreis_label"/>

        <Spinner
            android:id="@+id/spinner_kreise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/MyLabel"
            android:text="@string/kat_label"/>

        <Spinner
            android:id="@+id/kategorie_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewUeberschrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ueberschrift_liga"
        android:textSize="18sp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="5dp"
        android:background="#ffffffff"/>

    <ListView
        android:id="@+id/liga_detail_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
</LinearLayout>