...
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#ffffffff"/>
    <!--list entries-->
    <ListView
        android:id="@+id/liga_mannschaft_detail_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    </ListView>


...
