...
                    android:layout_column="1"
                    android:drawableTop="@drawable/ic_launcher_table"
                    android:onClick="tabelle"
                    android:text="@string/tabelle" />

                <Button
                    android:id="@+id/imageButton6"
                    style="@style/DashboardButton"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:drawableTop="@drawable/ic_launcher_plan"
                    android:onClick="spielplan"
                    android:text="@string/spielplan" />
...
