<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2013.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_firstname_label"
            android:id="@+id/textView"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_firstname_edit"
            android:id="@+id/detail_firstname" android:inputType="text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_lastname_label"
            android:id="@+id/textView1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_lastname_edit"
            android:id="@+id/detail_lastname" android:inputType="text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_club_label"
            android:id="@+id/textView2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_club_edit"
            android:id="@+id/detail_club" android:inputType="text"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_search"
            android:onClick="search"
            android:id="@+id/button" android:layout_gravity="center"/>
</LinearLayout>