...
    <string name="username_message">Usernamen eingeben</string>
    <string name="button_send">Login</string>
    <string name="button_start">Start</string>
    <string name="button_liga">Oder nur Liga Ergebnisse ansehen</string>
    <string name="password_message">Passwort eingeben</string>
    <string name="read_from_foto">Aus Photo lesen</string>
    <string name="enter_manual">TTR-Rechner</string>
    <string name="select_player_first">Bitte zunächst einen Spieler auswählen</string>
    <string name="after_login_text">Der Login war erfolgreich.\n\nFolgende Möglichkeiten hast du:</string>
    <string name="main_text">Bitte Login für myTischtennis.de eingeben</string>
    <string name="not_registered_text">Wenn du noch keinen mytischtennis Premium Zugang hast, kannst du bei
     www.mytischtennis.de/community/register einen Zugang beantragen.</string>
    <string name="player_1">Spieler 1:</string>
...
    <string name="entry_firstname_label">Vorname:</string>
    <string name="entries_new_player">Spieler anlegen</string>
    <string name="btn_edit_player">Spieler\nbearbeiten…</string>
    <string name="detail_search">Suchen</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="btn_new_player">Spieler eingeben und suchen</string>
    <string name="action_select_team">Anderes Team aussuchen</string>
    <string name="btn_bilanz">Bilanzen ansehen</string>
    <string name="btn_results">Aktuelle Ergebnisse ansehen</string>
    <string name="txt_player_list">Folgende Spieler sind bereits von dir hinzugefügt worden:</string>
    <!--<string name="txt_player_list_empty">Du hast noch keine Spieler ausgewählt. Benutze die Schaltfläche rechts</string>-->
    <string name="txt_player_list_empty">Du hast noch keine Spieler ausgewählt.\nBenutze die Schaltflächen oben</string>
...
