<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Borussia Düsseldorf"
        android:id="@+id/textViewClub"
        android:layout_marginBottom="10dp"/>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listheader="@layout/liga_mannschaft_bilanz_detail_header"
        tools:listitem="@layout/liga_verein_row"/>
</LinearLayout>